# cookiecutters

./: README.md
cpp/: cookiecutter.json
cpp-minimal/: cookiecutter.json
cpp-minimal/{{cookiecutter.project_slug}}/: CMakeLists.txt
cpp-minimal/{{cookiecutter.project_slug}}/src/: main.cpp
cpp/hooks/: post_gen_project.py
cpp/{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt
cpp/{{cookiecutter.project_slug}}/src/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp
cpp/{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  main.cpp  test_{{cookiecutter.project_slug}}.cpp  test_{{cookiecutter.project_slug}}.hpp
verilog/{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt
verilog/{{cookiecutter.project_slug}}/hdl/: top.v
verilog/{{cookiecutter.project_slug}}/test/: main.cpp
vhdl/{{cookiecutter.project_name}}/: run.py
vhdl/{{cookiecutter.project_name}}/sim/: {{cookiecutter.project_name}}_tb.vhd
vhdl/{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  hdl-prj.json  run.py
vhdl/{{cookiecutter.project_slug}}/src/: {{cookiecutter.project_name}}.vhd
